# CMake-Study

./: README.md
1.CMake_기초_문법/1.message/: README.md
1.CMake_기초_문법/2.variable/: README.md
1.basic_grammar/: CMakeLists.txt
1.basic_grammar/1.message/: CMakeLists.txt
1.basic_grammar/2.variable/: CMakeLists.txt
1.basic_grammar/3.control_statements/: CMakeLists.txt  README.md
1.basic_grammar/4.function/: CMakeLists.txt  README.md
1.basic_grammar/5.scope/: CMakeLists.txt  README.md
1.basic_grammar/5.scope/parent/: CMakeLists.txt
1.basic_grammar/5.scope/parent/child/: CMakeLists.txt
1.basic_grammar/6.file_system/: CMakeLists.txt  README.md
1.basic_grammar/6.file_system/cmake/: example.cmake
2.advanced_topics/: CMakeLists.txt
2.advanced_topics/1.pre_defined_global_variables/: CMakeLists.txt  README.md
2.advanced_topics/2.setting_cpp_project/: CMakeLists.txt  README.md
2.advanced_topics/2.setting_cpp_project/include/: utils.hpp
2.advanced_topics/2.setting_cpp_project/src/: printing_message.cpp  utils.cpp
2.advanced_topics/3.external_dependencies/: CMakeLists.txt  README.md
2.advanced_topics/3.external_dependencies/src/: add_testing.cpp
2.advanced_topics/4.automation/: CMakeLists.txt  README.md
2.advanced_topics/4.automation/scripts/: external_script.sh
